2007-05-05  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl (generate_pspec): use $flags and not a
	literal GIMP_PARAM_READWRITE for the image paramspec's flags.

	* app/pdb/image_cmds.c: regenerated.

2007-05-05  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (convolve_region): instead of just
	copying the border pixels, convolute the full region and extend
	the borders.

	* app/paint/gimpconvolve.[ch]: removed broken code that used to
	deal with the image borders. Fixes bug #434279. Also reduced the
	matrix sizes to 3x3 as only the inner 3x3 values were nonzero.

2007-05-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/papertile.c: whitespace cleanup, tabs -> spaces.

2007-05-05  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.

2007-05-05  Sven Neumann  <sven@gimp.org>

	* app/base/gimplut.[ch]
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c: reverted the changes done for bug
	#331782. See the bug report for an explanation.

2007-05-05  Mukund Sivaraman  <muks@mukund.org>

	* app/gui/splash.c: reverted the progress bar size change.

2007-05-05  Mukund Sivaraman  <muks@mukund.org>

	* app/gui/splash.c: make the splash progress bar lean and mean.

2007-05-05  Mukund Sivaraman  <muks@mukund.org>

	* app/base/gimplut.[ch]
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c: Fixed the value channel color
	correction in the curves and levels tools to only modify the
	value channel and not the hues. Fixes bug #331782.

2007-05-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_boundary): fixed
	off-by-one (too large) drawing of boundaries by copying the resp.
	code and its obscure comment from gimpdisplayshell-selection.c
	Fixes bug #416432.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/dialogs/tips-dialog.c: make the tips label selectable.

2007-05-04  Sven Neumann  <sven@gimp.org>
