@@ -1,3 +1,15 @@
+2007-05-06  Sven Neumann  <sven@gimp.org>
+
+	* HACKING: suggest to use pango-1-16.
+
+	* configure.in: added --enable-gtk-doc-app option and an automake
+	conditional for it.
+	
+	* devel-docs/Makefile.am: build the app directory conditionally.
+
+	* devel-docs/app/Makefile.am: override disthook since we don't
+	want to distribute any generated files.
+
 2007-05-05  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/app.pl (generate_pspec): use $flags and not a
